# testing_rocket_diesel

./: .env  .gitignore  Cargo.toml  Rocket.toml  docker-compose.yml
migrations/2021-02-23-174846_create_people/: down.sql  up.sql
src/: main.rs
