[package]
name = "rust_diesel_rocket_testing"
version = "0.1.0"
authors = ["Will Lane <williamlane923@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuidv07"] }
rocket = "0.4.7"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_postgres_pool"]
